Добавил рисунки для двух моментов времени

--- a/Yalta.tex
+++ b/Yalta.tex
@@ -34,12 +34,9 @@
 \newcommand{\suml}{\sum\limits}
 \newcommand{\intl}{\int\limits}
 
-\title{Моделирование разрушения жидкого кубика методом SPH}
-\author{М.Н. Давыдов}
-\date{Институт гидродинамики им. М.А. Лаврентьева СО РАН, 
-630090 Новосибирск, E-mail: davydov@hydro.nsc.ru}
-
-
+\title{Simulation of fracture liquid cube with SPH}
+\author{M N Davydov}
+\date{Lavrentyev Institute of Hydrodynamics of the Siberian Branch of the Russian Academy of Sciences // davydov@hydro.nsc.ru}
 
 
 \begin{document}
@@ -93,9 +90,24 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 			
 \section{Постановка задачи}
 
-В начальный момент времени жидкость представляла собой кубик со стороной 1 см, расположенный на плоскости XY, ось OZ проходит через центр кубика. Внутри жидкости, под верхней гранью, находилась сферическая полость радиуса 1мм, центр которой расположен на оси OZ на расстоянии 2.5 мм от верхней грани куба. Давление в полости оставляло 10000 атм, остальной объем жидкости был при атмосферном давлении.
+В начальный момент времени жидкость представляла собой кубик со стороной 1 см, расположенный на плоскости XY, ось OZ проходит через центр кубика. Внутри жидкости, на расстоянии 2.5 мм от верхней грани куба, находилась сферическая полость радиуса 1мм, центр которой расположен на оси OZ. Давление в полости оставляло 10000 атм, остальной объем жидкости был при атмосферном давлении.
 
-Рис. 1.Центральное сечение кубика (750 мкс.)
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=0.6\textwidth]{P-1.eps}\includegraphics[width=0.4\textwidth]{Vel-1.eps}
+\end{center}
+\caption{\label{P-Vel-1} Распределение давления и скорости в центральном сечении кубика в момент времени 1 мкс}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=0.6\textwidth]{P-5.eps}\includegraphics[width=0.4\textwidth]{Vel-5.eps}
+\end{center}
+\caption{\label{P-Vel-5} Распределение давления и скорости в центральном сечении кубика в момент времени 5 мкс}
+\end{figure}
+
+
 
 
 Хорошо заметно, что к моменту времени 750 мкс (рис. 1) полость расширилась в несколько раз, «вытянулась» вверх, выталкивая слои жидкости, образующие верхнюю грань кубика. Нижняя и боковые грани куба деформировались незначительно, а на верхней грани  формируется заметная выпуклость. Внутри куба от расширяющейся полости распространяются волны, также хорошо видимые на рисунке, в результате их отражения от граней куба, на некоторой глубине от боковых поверхностей возникают зоны разрежения.
