Добавил рисунок для 25 мкс и аннотацию.

--- a/Yalta.tex
+++ b/Yalta.tex
@@ -34,7 +34,7 @@
 \newcommand{\suml}{\sum\limits}
 \newcommand{\intl}{\int\limits}
 
-\title{Simulation of fracture liquid cube with SPH}
+\title{Simulation of destruction liquid cube with SPH}
 \author{M N Davydov}
 \date{Lavrentyev Institute of Hydrodynamics of the Siberian Branch of the Russian Academy of Sciences // davydov@hydro.nsc.ru}
 
@@ -45,8 +45,12 @@
 
 
 \begin{abstract}
-В работе численно исследуется задача о разрушении жидкого кубика, внутри которого имеется полость с высоким давлением, с использованием метода SPH (Smoothed Particle Hydrodynamics)~\cite{Monaghan2005}. 
+В работе численно исследуется задача о разрушении жидкого кубика, внутри которого имеется полость с высоким давлением, с использованием метода SPH (Smoothed Particle Hydrodynamics)~\cite{Monaghan2005}. Показана деформация полости, и формирование выброса на верхней грани кубика. Численное моделирование показывает что распространение  ударной волны от растущей полости и ее отражение от стенок приводит к релаксации поля давления и дальнейшему инерционному разлету среды.  
 \end{abstract}
+
+\section{Introduction}
+
+Известно что разрушение жидкостей, таких как обычная вода или магматические расплавы, носит кавитационный характер и связаны с наличием большого количества пузырьков газа~\cite{Davydov2012a}. Обычные численные методы, основанные на конечных разностях, не в состоянии решить подобные задачи, следовательно требуется использовать методы, способные провести моделирование течений в области со сложной изменяющейся геометрией	и меняющейся топологией самого течения. В данной работе рассматривается модельная задача о разрушении жидкого объема с использованием метода SPH. 
 
 \section{SPH method}
 
@@ -84,13 +88,13 @@ for approximation; therefore, it does not affect the resultant solution, and the
 \[\frac{\partial v_i}{\partial t} = - \suml_{j=1}^{N} m_j \left ( \frac{p_i}{\rho_i^2} + \frac{p_j}{\rho_j^2} \right) \nabla W(r_i-r_j,h).\]
 
 We use the known definition of the liquid state equation:  
-\[p= \frac{\rho_0 c_0^2}{\gamma p_0} \left[ \left( \frac{\rho}{\rho_0} \right)^{\gamma} - 1 \right],\]
+\[p= p_0 + \frac{\rho_0 c_0^2}{\gamma} \left[ \left( \frac{\rho}{\rho_0} \right)^{\gamma} - 1 \right],\]
 where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, $c_0$ is a speed of sound (approx 1500 m/s).
 
 			
 \section{Постановка задачи}
 
-В начальный момент времени жидкость представляла собой кубик со стороной 1 см, расположенный на плоскости XY, ось OZ проходит через центр кубика. Внутри жидкости, на расстоянии 2.5 мм от верхней грани куба, находилась сферическая полость радиуса 1мм, центр которой расположен на оси OZ. Давление в полости оставляло 10000 атм, остальной объем жидкости был при атмосферном давлении.
+В начальный момент времени жидкость представляла собой кубик со стороной 1 см, расположенный на плоскости XY, ось OZ проходит через центр кубика. Внутри жидкости, на расстоянии 2.5 мм от верхней грани куба, находилась сферическая полость радиуса 1мм, центр которой расположен на оси OZ. Давление в полости оставляло 10000 атм, остальной объем жидкости был при атмосферном давлении. На рисунках ниже показано распределение давления в узлах и скоростей частиц в центральном сечении кубика (плоскость $y=0$).
 
 
 \begin{figure}
@@ -100,6 +104,9 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \caption{\label{P-Vel-1} Распределение давления и скорости в центральном сечении кубика в момент времени 1 мкс}
 \end{figure}
 
+От полости высокого давления распространяется волна давления, амплитуда которой естественно уменьшается по мере распространения. Ближний к полости слой жидкости приходит в движение, на графике (Рис.~\ref{P-Vel-1}) становятся заметны скорости частиц (частицы в которых $\vec{v} =0$ не показаны). В дальнейшем волна доходит до краев кубика и отражается от его границ, сначала это происходит на верхней грани, потом на боковых и нижней (Рис.~\ref{P-Vel-5}). Через несколько десятков микросекунд поле давления практически релаксирует, только в отдельных частицах давление больше $p_0$, а набравшие скорость частицы продолжают разлетаться по инерции, тем самым моделируя разрушение среды (Рис.~\ref{P-Vel-25}).
+
+
 \begin{figure}
 \begin{center}
 \includegraphics[width=0.6\textwidth]{P-5.eps}\includegraphics[width=0.4\textwidth]{Vel-5.eps}
@@ -108,10 +115,16 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \end{figure}
 
 
-
+\begin{figure}
+\begin{center}
+\includegraphics[width=0.6\textwidth]{P-25.eps}\includegraphics[width=0.4\textwidth]{Vel-25.eps}
+\end{center}
+\caption{\label{P-Vel-1} Распределение давления и скорости в центральном сечении кубика в момент времени 25 мкс}
+\end{figure}
 
 Хорошо заметно, что к моменту времени 750 мкс (рис. 1) полость расширилась в несколько раз, «вытянулась» вверх, выталкивая слои жидкости, образующие верхнюю грань кубика. Нижняя и боковые грани куба деформировались незначительно, а на верхней грани  формируется заметная выпуклость. Внутри куба от расширяющейся полости распространяются волны, также хорошо видимые на рисунке, в результате их отражения от граней куба, на некоторой глубине от боковых поверхностей возникают зоны разрежения.
-В дальнейшем на верхней грани кубика формируется вертикальная струя жидкости, которая постепенно разрушается. На боковых и нижней гранях, образуются отдельные отлетающие слои, где разрушение пока не настолько сильно выражено. В дальнейшем и на этих участках будет происходить раз-рушение жидкости и возникновение отколовшихся от основного объема «слоев».
+В дальнейшем на верхней грани кубика формируется вертикальная струя жидкости, которая постепенно разрушается. На боковых и нижней гранях, образуются отдельные отлетающие слои, где разрушение пока не настолько сильно выражено. В дальнейшем и на этих участках будет происходить разрушение жидкости и возникновение отколовшихся от основного объема «слоев».
+
 Необходимо отметить, что SPH частицы, отлетая друг от друга на расстояние, большее чем радиус сглаживания, перестают влиять друг на друга, что можно интерпретировать как разрушение среды~\cite{DavydovKedrinskii2013}. Так к моменту времени 1500 мкс частицы, ранее расположенные над полостью, фактически распылились, и в верхней части объема образовалось отверстие.
 
 
@@ -133,17 +146,11 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 
 \section{Заключение}
 
+Работа выполнена при частичной поддержке РФФИ (грант 15-05-03336).
+
 %\bibliographystyle{unsrt}
 \bibliographystyle{gost2008}
 \bibliography{d:/Dropbox/BibtexBase/Work}
 
 
 \end{document}
-
-	
-\begin{figure}[ht]
-\begin{center}
-\includegraphics[width=0.48\textwidth]{K-6.eps}
-\end{center}
-\caption{Формирование первого разрыва.} \label{f:K-6}
-\end{figure} 
