--- a/Yalta.tex
+++ b/Yalta.tex
@@ -1,3 +1,4 @@
+% \documentclass[12pt,a4paper,draft]{article}
 \documentclass[12pt,a4paper]{article}
 
 \setlength{\textwidth}{170mm} %ширина текста 6in=152mm
@@ -34,7 +35,7 @@
 \newcommand{\suml}{\sum\limits}
 \newcommand{\intl}{\int\limits}
 
-\title{Simulation of destruction liquid cube with SPH}
+\title{Simulation of liquid cube  fracture with SPH}
 \author{M N Davydov}
 \date{Lavrentyev Institute of Hydrodynamics of the Siberian Branch of the Russian Academy of Sciences // davydov@hydro.nsc.ru}
 
@@ -104,8 +105,7 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \caption{\label{P-Vel-1} Распределение давления и скорости в центральном сечении кубика в момент времени 1 мкс}
 \end{figure}
 
-От полости высокого давления распространяется волна давления, амплитуда которой естественно уменьшается по мере распространения. Ближний к полости слой жидкости приходит в движение, на графике (Рис.~\ref{P-Vel-1}) становятся заметны скорости частиц (частицы в которых $\vec{v} =0$ не показаны). В дальнейшем волна доходит до краев кубика и отражается от его границ, сначала это происходит на верхней грани, потом на боковых и нижней (Рис.~\ref{P-Vel-5}). Через несколько десятков микросекунд поле давления практически релаксирует, только в отдельных частицах давление больше $p_0$, а набравшие скорость частицы продолжают разлетаться по инерции, тем самым моделируя разрушение среды (Рис.~\ref{P-Vel-25}).
-
+От полости высокого давления распространяется ударная волна, амплитуда которой естественно уменьшается по мере распространения. В указанный момент времени волна подходит в верхней грани кубика, начинается процесс отражения (Рис.~\ref{P-Vel-1}). Ближний к полости слой жидкости приходит в движение, на графике  становятся заметны скорости частиц (частицы в которых $\vec{v} =0$ не показаны). Хорошо видно что распределение скоростей симметрично относительно полости. 
 
 \begin{figure}
 \begin{center}
@@ -114,6 +114,7 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \caption{\label{P-Vel-5} Распределение давления и скорости в центральном сечении кубика в момент времени 5 мкс}
 \end{figure}
 
+В дальнейшем волна доходит до краев кубика и отражается от его границ, сначала это происходит на верхней грани, потом на боковых и нижней (Рис.~\ref{P-Vel-5}). К этому времени верхняя грань заметно деформировалась, сдвинувшись вверх. Почти все частицы пришли в движение, видно что частицы на границе полости <<толкают>> остальные частицы.
 
 \begin{figure}
 \begin{center}
@@ -122,31 +123,40 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \caption{\label{P-Vel-1} Распределение давления и скорости в центральном сечении кубика в момент времени 25 мкс}
 \end{figure}
 
-Хорошо заметно, что к моменту времени 750 мкс (рис. 1) полость расширилась в несколько раз, «вытянулась» вверх, выталкивая слои жидкости, образующие верхнюю грань кубика. Нижняя и боковые грани куба деформировались незначительно, а на верхней грани  формируется заметная выпуклость. Внутри куба от расширяющейся полости распространяются волны, также хорошо видимые на рисунке, в результате их отражения от граней куба, на некоторой глубине от боковых поверхностей возникают зоны разрежения.
-В дальнейшем на верхней грани кубика формируется вертикальная струя жидкости, которая постепенно разрушается. На боковых и нижней гранях, образуются отдельные отлетающие слои, где разрушение пока не настолько сильно выражено. В дальнейшем и на этих участках будет происходить разрушение жидкости и возникновение отколовшихся от основного объема «слоев».
-
-Необходимо отметить, что SPH частицы, отлетая друг от друга на расстояние, большее чем радиус сглаживания, перестают влиять друг на друга, что можно интерпретировать как разрушение среды~\cite{DavydovKedrinskii2013}. Так к моменту времени 1500 мкс частицы, ранее расположенные над полостью, фактически распылились, и в верхней части объема образовалось отверстие.
-
-
-Рис. 2. Половинка кубика в объемном виде (3000 мкс.)
-
-На рис. 2 показано развитие процесса в объемном виде. Изображена изоповерхность плотности для «половинки» кубика, построенная по значению 0.55 г/см3, то есть изоповерхность ограничивает область, в которой плотность среды больше или равна заданной. Видно, что среда, разлетаясь, теряет связность и распадается на отдельные фрагменты. Дальнейшее развитие процесса приводит к распылению частиц и окончательному разрушению среды.
+Через несколько десятков микросекунд поле давления практически релаксирует, только в отдельных частицах давление больше $p_0$, а набравшие скорость частицы продолжают разлетаться по инерции, тем самым моделируя разрушение среды (Рис.~\ref{P-Vel-25}). Становятся заметными деформации боковых граней. Распределение частиц показывает что внутри кубика формируются зоны разрежения, рост которых приведет к разрушению среды на отдельные фрагменты. 
 
 
 
 
+\begin{figure}
+\begin{center}
+\includegraphics[width=0.4\textwidth]{3D-1.eps} \hfill \includegraphics[width=0.4\textwidth]{3D-2.eps}
+\end{center}
+\caption{\label{3D-1} Изоповерхность $\rho=0.45$ $\text{g}/\text{cm}^3$ для половины кубика в моменты времени 500 и 3000 мкс}
+\end{figure}
 
-\section{Результаты}
-       
+На Рис.~\ref{3D} показано развитие процесса в объемном виде. Изображена изоповерхность плотности для «половинки» кубика, построенная по значению 0.45 г/см3, то есть изоповерхность ограничивает область, в которой плотность среды больше или равна заданной. Хорошо заметно, что к моменту времени 300 мкс (Рис.~\ref{3D}) полость расширилась в несколько раз, «вытянулась» вверх, выталкивая слои жидкости, образующие верхнюю грань кубика. Нижняя и боковые грани куба деформировались незначительно, а на верхней грани формируется заметная выпуклость, появляется отверстие. 
 
-		
+В дальнейшем на верхней грани кубика формируется вертикальная струя жидкости, которая постепенно разрушается. На боковых и нижней гранях, образуются отдельные отлетающие слои, где разрушение пока не настолько сильно выражено. В дальнейшем и на этих участках будет происходить разрушение жидкости и возникновение отколовшихся от основного объема «слоев». Видно, что среда, разлетаясь, теряет связность и распадается на отдельные фрагменты. Дальнейшее развитие процесса приводит к распылению частиц и окончательному разрушению среды.
+
+Необходимо отметить, что SPH частицы, отлетая друг от друга на расстояние, большее чем радиус сглаживания, перестают влиять друг на друга, что можно интерпретировать как разрушение среды~\cite{DavydovKedrinskii2013}. Так к моменту времени 300 мкс частицы, ранее расположенные над полостью, фактически распылились, и в верхней части объема образовалось отверстие.
+
+
+
 
 
 
 
 \section{Заключение}
 
-Работа выполнена при частичной поддержке РФФИ (грант 15-05-03336).
+The results of numerical modeling show that the SPH method can be used to study the dynamics of the state of a  flow of a medium with a liquid cube fracture. The results of the numerical analysis of the processes of formation and dynamics of the structure of spalling zones after reflection of the shock wave generated by an underwater explosion from the free surface are presented. A numerical study of the 
+dynamics of the liquid cube under shock-wave loading shows that the shock wave reflected from the free
+surface leads to the relax of a high pressure and subsequent decomposition into individual fragments and clusters
+of almost free particles.
+
+This work was supported by the
+Russian Foundation for Basic Research (Grant No. 15-05-03336).
+
 
 %\bibliographystyle{unsrt}
 \bibliographystyle{gost2008}
