Поправил метки у картинок

--- a/Yalta.tex
+++ b/Yalta.tex
@@ -120,7 +120,7 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \begin{center}
 \includegraphics[width=0.6\textwidth]{P-25.eps}\includegraphics[width=0.4\textwidth]{Vel-25.eps}
 \end{center}
-\caption{\label{P-Vel-1} Распределение давления и скорости в центральном сечении кубика в момент времени 25 мкс}
+\caption{\label{P-Vel-25} Распределение давления и скорости в центральном сечении кубика в момент времени 25 мкс}
 \end{figure}
 
 Через несколько десятков микросекунд поле давления практически релаксирует, только в отдельных частицах давление больше $p_0$, а набравшие скорость частицы продолжают разлетаться по инерции, тем самым моделируя разрушение среды (Рис.~\ref{P-Vel-25}). Становятся заметными деформации боковых граней. Распределение частиц показывает что внутри кубика формируются зоны разрежения, рост которых приведет к разрушению среды на отдельные фрагменты. 
@@ -135,7 +135,7 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \caption{\label{3D-1} Изоповерхность $\rho=0.45$ $\text{g}/\text{cm}^3$ для половины кубика в моменты времени 500 и 3000 мкс}
 \end{figure}
 
-На Рис.~\ref{3D} показано развитие процесса в объемном виде. Изображена изоповерхность плотности для «половинки» кубика, построенная по значению 0.45 г/см3, то есть изоповерхность ограничивает область, в которой плотность среды больше или равна заданной. Хорошо заметно, что к моменту времени 300 мкс (Рис.~\ref{3D}) полость расширилась в несколько раз, «вытянулась» вверх, выталкивая слои жидкости, образующие верхнюю грань кубика. Нижняя и боковые грани куба деформировались незначительно, а на верхней грани формируется заметная выпуклость, появляется отверстие. 
+На Рис.~\ref{3D-1} показано развитие процесса в объемном виде. Изображена изоповерхность плотности для «половинки» кубика, построенная по значению 0.45 г/см3, то есть изоповерхность ограничивает область, в которой плотность среды больше или равна заданной. Хорошо заметно, что к моменту времени 300 мкс (Рис.~\ref{3D-1}) полость расширилась в несколько раз, «вытянулась» вверх, выталкивая слои жидкости, образующие верхнюю грань кубика. Нижняя и боковые грани куба деформировались незначительно, а на верхней грани формируется заметная выпуклость, появляется отверстие. 
 
 В дальнейшем на верхней грани кубика формируется вертикальная струя жидкости, которая постепенно разрушается. На боковых и нижней гранях, образуются отдельные отлетающие слои, где разрушение пока не настолько сильно выражено. В дальнейшем и на этих участках будет происходить разрушение жидкости и возникновение отколовшихся от основного объема «слоев». Видно, что среда, разлетаясь, теряет связность и распадается на отдельные фрагменты. Дальнейшее развитие процесса приводит к распылению частиц и окончательному разрушению среды.
 
