Добавил текста в аннотацуию + мелкие правки

--- a/Yalta.tex
+++ b/Yalta.tex
@@ -46,12 +46,12 @@
 
 
 \begin{abstract}
-В работе численно исследуется задача о разрушении жидкого кубика, внутри которого имеется полость с высоким давлением, с использованием метода SPH (Smoothed Particle Hydrodynamics)~\cite{Monaghan2005}. Показана деформация полости, и формирование выброса на верхней грани кубика. Численное моделирование показывает что распространение  ударной волны от растущей полости и ее отражение от стенок приводит к релаксации поля давления и дальнейшему инерционному разлету среды.  
+В работе численно исследуется задача о разрушении жидкого кубика, внутри которого имеется полость с высоким давлением, с использованием метода SPH (Smoothed Particle Hydrodynamics)~\cite{Monaghan2005}.  Численное моделирование показывает что распространение  ударной волны от растущей полости и ее отражение от стенок приводит к релаксации поля давления и дальнейшему инерционному разлету среды. Показана деформация и рост полости и формирование выброса на верхней грани кубика.
 \end{abstract}
 
 \section{Introduction}
 
-Известно что разрушение жидкостей, таких как обычная вода или магматические расплавы, носит кавитационный характер и связаны с наличием большого количества пузырьков газа~\cite{Davydov2012a}. Обычные численные методы, основанные на конечных разностях, не в состоянии решить подобные задачи, следовательно требуется использовать методы, способные провести моделирование течений в области со сложной изменяющейся геометрией	и меняющейся топологией самого течения. В данной работе рассматривается модельная задача о разрушении жидкого объема с использованием метода SPH. 
+Известно что разрушение жидкостей носит кавитационный характер и связано с наличием большого количества пузырьков газа~\cite{Davydov2012a}. Характерным примером подобного процесса является выброс магматического расплава из канала вулкана при его извержении. Обычные численные методы, основанные на конечных разностях, не в состоянии решить подобные задачи, следовательно требуется использовать методы, способные провести моделирование течений как в области со сложной изменяющейся геометрией	так и меняющейся топологией самого течения. В данной работе рассматривается модельная задача о подводном взрыве и разрушении жидкого кубика с использованием метода SPH. 
 
 \section{SPH method}
 
@@ -95,7 +95,7 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 			
 \section{Постановка задачи}
 
-В начальный момент времени жидкость представляла собой кубик со стороной 1 см, расположенный на плоскости XY, ось OZ проходит через центр кубика. Внутри жидкости, на расстоянии 2.5 мм от верхней грани куба, находилась сферическая полость радиуса 1мм, центр которой расположен на оси OZ. Давление в полости оставляло 10000 атм, остальной объем жидкости был при атмосферном давлении. На рисунках ниже показано распределение давления в узлах и скоростей частиц в центральном сечении кубика (плоскость $y=0$).
+В начальный момент времени жидкость представляла собой кубик со стороной 1 см, расположенный на плоскости XY, ось OZ проходит через центр кубика. Внутри жидкости, на расстоянии 2.5 мм от верхней грани куба, находилась сферическая полость радиуса 1мм, центр которой расположен на оси OZ. Давление в полости оставляло 10000 атм, остальной объем жидкости был при атмосферном давлении. На Рис.~\ref{P-Vel-1}-\ref{P-Vel-25} показано распределение давления в узлах и скоростей частиц в центральном сечении кубика (плоскость $y=0$).
 
 
 \begin{figure}
@@ -114,7 +114,7 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \caption{\label{P-Vel-5} Распределение давления и скорости в центральном сечении кубика в момент времени 5 мкс}
 \end{figure}
 
-В дальнейшем волна доходит до краев кубика и отражается от его границ, сначала это происходит на верхней грани, потом на боковых и нижней (Рис.~\ref{P-Vel-5}). К этому времени верхняя грань заметно деформировалась, сдвинувшись вверх. Почти все частицы пришли в движение, видно что частицы на границе полости <<толкают>> остальные частицы.
+В дальнейшем волна доходит до краев кубика и отражается от его границ, сначала это происходит на боковой грани, затем на нижней (Рис.~\ref{P-Vel-5}). К этому времени верхняя грань заметно деформировалась, сдвинувшись вверх. Почти все частицы пришли в движение, видно что частицы на границе полости <<толкают>> остальные частицы.
 
 \begin{figure}
 \begin{center}
@@ -123,7 +123,7 @@ where  $\gamma = 7.15$, $\rho_0$ and $p_0$ is a reference density and pressure, 
 \caption{\label{P-Vel-25} Распределение давления и скорости в центральном сечении кубика в момент времени 25 мкс}
 \end{figure}
 
-Через несколько десятков микросекунд поле давления практически релаксирует, только в отдельных частицах давление больше $p_0$, а набравшие скорость частицы продолжают разлетаться по инерции, тем самым моделируя разрушение среды (Рис.~\ref{P-Vel-25}). Становятся заметными деформации боковых граней. Распределение частиц показывает что внутри кубика формируются зоны разрежения, рост которых приведет к разрушению среды на отдельные фрагменты. 
+Через несколько десятков микросекунд поле давления практически релаксирует, только в отдельных частицах давление больше $p_0$, а набравшие скорость частицы продолжают разлетаться по инерции, тем самым моделируя разрушение среды (Рис.~\ref{P-Vel-25}). Становятся заметными деформации боковых и нижней граней кубика. Распределение частиц показывает что внутри кубика формируются зоны разрежения, рост которых приведет к разрушению среды на отдельные фрагменты. 
 
 
 
